crates/pixi_build_flutter/src/snapshots/pixi_build_flutter__build_script__tests__build_script@Unix-Dart-.snap
---
source: crates/pixi_build_flutter/src/build_script.rs
expression: script
---
set -euxo pipefail
rm -rf "$SRC_DIR/app"
mkdir -p "$SRC_DIR/app"
(cd "/src/my_app" && tar --exclude=./build --exclude=./.dart_tool --exclude=./.pixi -cf - .) | (cd "$SRC_DIR/app" && tar -xf -)
cd "$SRC_DIR/app"
export PUB_CACHE="${PUB_CACHE:-$SRC_DIR/.pub-cache}"

dart --version
dart pub get

mkdir -p "$PREFIX/bin"
dart compile exe "bin/main.dart" -o "$PREFIX/bin/hello" --dart-define=FOO=bar
