crates/pixi_build_flutter/src/snapshots/pixi_build_flutter__build_script__tests__build_script@Unix-Flutter-linux.snap
---
source: crates/pixi_build_flutter/src/build_script.rs
expression: script
---
set -euxo pipefail
rm -rf "$SRC_DIR/app"
mkdir -p "$SRC_DIR/app"
(cd "/src/my_app" && tar --exclude=./build --exclude=./.dart_tool --exclude=./.pixi -cf - .) | (cd "$SRC_DIR/app" && tar -xf -)
cd "$SRC_DIR/app"
export PUB_CACHE="${PUB_CACHE:-$SRC_DIR/.pub-cache}"

if [ "$(cat "/cache/flutter-sdk/3.47.6/.pixi-sdk-sha256" 2>/dev/null || true)" != "abc123" ]; then
  sdk_tmp="/cache/flutter-sdk/3.47.6.download.$$"
  rm -rf "$sdk_tmp"
  mkdir -p "$sdk_tmp"
  curl -fsSL --retry 3 -o "$sdk_tmp/flutter.zip" "https://example.com/flutter.zip"
  actual=$(cmake -E sha256sum "$sdk_tmp/flutter.zip" | cut -d' ' -f1)
  if [ "$actual" != "abc123" ]; then
    echo "checksum mismatch for https://example.com/flutter.zip: $actual" >&2
    exit 1
  fi
  (cd "$sdk_tmp" && cmake -E tar xf "flutter.zip")
  rm -rf "/cache/flutter-sdk/3.47.6"
  mv "$sdk_tmp/flutter" "/cache/flutter-sdk/3.47.6"
  echo "abc123" > "/cache/flutter-sdk/3.47.6/.pixi-sdk-sha256"
  rm -rf "$sdk_tmp"
fi
export FLUTTER_ROOT="/cache/flutter-sdk/3.47.6"
export PATH="$FLUTTER_ROOT/bin:$PATH"
export FLUTTER_SUPPRESS_ANALYTICS=true
export CI=true
# The SDK is a git checkout that the flutter tool inspects; trust it without
# touching the user's git config.
export GIT_CONFIG_COUNT=1 GIT_CONFIG_KEY_0=safe.directory GIT_CONFIG_VALUE_0='*'

"/cache/flutter-sdk/3.47.6/bin/flutter" --suppress-analytics --version
if [ ! -d "linux" ]; then
  "/cache/flutter-sdk/3.47.6/bin/flutter" --suppress-analytics create --platforms=linux --project-name my_app .
fi
# Let the runner's CMake project find and link GTK in the host environment.
# libflutter_linux_gtk.so needs epoxy and fontconfig from there too.
export PKG_CONFIG_PATH="$PREFIX/lib/pkgconfig:$PREFIX/share/pkgconfig${PKG_CONFIG_PATH:+:$PKG_CONFIG_PATH}"
export LDFLAGS="-L$PREFIX/lib -Wl,-rpath-link,$PREFIX/lib ${LDFLAGS:-}"
"/cache/flutter-sdk/3.47.6/bin/flutter" --suppress-analytics pub get
"/cache/flutter-sdk/3.47.6/bin/flutter" --suppress-analytics build linux --release --dart-define=FOO=bar

bundle=$(ls -d build/linux/*/release/bundle | head -n 1)
mkdir -p "$PREFIX/lib/my_app" "$PREFIX/bin"
cp -R "$bundle/." "$PREFIX/lib/my_app/"
# The runner finds its data/ and lib/ next to the resolved executable, so a
# symlink in bin/ works.
for exe in $(find "$bundle" -maxdepth 1 -type f -perm -u+x -exec basename {} \;); do
  ln -sf "../lib/my_app/$exe" "$PREFIX/bin/$exe"
done
